--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,19 @@ main {
     width:  100px;
     height: 100px;
     margin: 5px;
-    border: 1px solid gray;
+    border: 4px solid rgb(0, 0, 0);
     border-radius: 6px;
-    font-size: 30px;
+    font-size: 60px;
     cursor: pointer;
+    background-color: rgb(0,255,0);
+    color: rgb(255, 0, 0);
+}
+body {
+    background-color: rgb(0, 0, 255);
+}
+h1 {
+    color: rgb(242, 255, 0);
+}
+h2 {
+    color: rgb(242, 255, 0);
 }
