--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,9 @@ h1 {
 h2 {
     color: rgb(41, 68, 180);
 }
+.reinicio {
+color: rgb(41, 68, 180);
+background-color: rgb(255, 247, 0);
+border: 4px solid rgb(255, 247, 0);
+font-size: 60px;
+}
