--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ main {
     cursor: pointer;
     background-color: rgb(255, 247, 0);
     color: rgb(41, 68, 180);
+    background-size: 119%;
 }
 body {
     background-color: rgb(0, 0, 0);
@@ -28,4 +29,17 @@ color: rgb(41, 68, 180);
 background-color: rgb(255, 247, 0);
 border: 4px solid rgb(255, 247, 0);
 font-size: 30px;
+}
+
+.containerPersonagens div input {
+    width:  100px;
+    height: 100px;
+    margin: 5px;
+    border: 4px solid rgb(0, 0, 0);
+    border-radius: 6px;
+    font-size: 60px;
+    cursor: pointer;
+    background-color: rgb(255, 247, 0);
+    color: rgb(41, 68, 180);
+    background-size: 120%;
 }
